# smartobserver

./: .gitignore  README.md  autoworklet.kv  main.py  pyproject.toml
autoworklet/: pubsub.py  recorder.py  replayer.py
autoworklet/detection/: ewc.py  trainer.py
autoworklet/llm/: gemini.py
autoworklet/segment/: fastsam.py  mobilesam.py
autoworklet/speak/: T5TTS.py  __init__.py  speak.py
autoworklet/speech/: speech.py
autoworklet/speech/transcribe/: huggingface.py  whisper.py
libnut/: __init__.py  cpp_extension.py  main.cpp
libnut/src/: MMBitmap.c  screengrab.h
libnut/src/macos/: keycode.c  keypress.c  screengrab.m  window_manager.mm
uiohook/: __init__.py  main.cpp  uiohook_worker.c
uiohook/src/darwin/: input_helper.c  input_hook.c  post_event.c  system_properties.c
